--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -2631,6 +2631,325 @@ a.closeparent {
     #tcm_results .type span {
         transform: rotate(180deg);
     }
+
+    #grit_results {
+        background-position: -130px -50px;
+        width: 432px;
+        height: 370px;
+        background-size: 130%;
+    }
+    
+    #grit_results .grit_score_bubble {
+        width: 130px;
+        height: 130px;
+        top: 20px;
+        right: 20px;
+        font-size:80%;
+    }
+
+    #grit_results .grit_score_bubble h3 {
+        font-size: 180%;
+        margin-top:10px;
+    }
+
+    #grit_results .sisyphus{
+        width:90px;
+        height:100px;
+        bottom:-20px;
+        right:-60px;
+    }
+    #grit_results .sisyphus:before{
+        width:50px; 
+        height:50px;
+        top: 50px;
+        left: 40px;
+    }
+    #grit_results .sisyphus:after{
+        width:65px; 
+        height:65px;
+    }
+
+    #grit_results li.one_hundred {
+        top:20px;
+        left:60px;
+    }
+    #grit_results li.ninety {
+        top:48px;
+        left:98px;
+    }
+    #grit_results li.eighty {
+        top:77px;
+        left:126px;
+    }
+    #grit_results li.seventy {
+        top:112px;
+        left:145px;
+    }
+    #grit_results li.sixty {
+        top:136px;
+        left:168px;
+    }
+    #grit_results li.fifty {
+        top:152px;
+        left:208px;
+    }
+    #grit_results li.forty {
+        top:170px;
+        left:250px;
+    }
+    #grit_results li.thirty {
+        top:190px;
+        left:290px;
+    }
+    #grit_results li.twenty {
+        top:210px;
+        left:321px;
+    }
+    #grit_results li.ten {
+        top:230px;
+        left:356px;
+    } 
+
+    @keyframes pushing_rock_100 { 
+        10% { 
+            bottom:40px;
+            right:10px;
+        } 
+        20% { 
+            bottom:60px;
+            right:45px;
+        } 
+        30% { 
+            bottom:80px;
+            right:75px;
+        } 
+        40% { 
+            bottom:100px;
+            right:115px;
+        } 
+        50% { 
+            bottom:120px;
+            right:155px;
+        } 
+        60% { 
+            bottom:130px;
+            right:195px;
+        } 
+        70% { 
+            bottom:150px;
+            right:225px;
+        } 
+        80% { 
+            bottom:180px;
+            right:245px;
+        } 
+        90% { 
+            bottom:210px;
+            right:275px;
+        } 
+        100% { 
+            bottom:235px;
+            right:305px;
+        } 
+    }
+    @keyframes pushing_rock_90 { 
+        11% { 
+            bottom:40px;
+            right:10px;
+        } 
+        22% { 
+            bottom:60px;
+            right:45px;
+        } 
+        33% { 
+            bottom:80px;
+            right:75px;
+        } 
+        44% { 
+            bottom:100px;
+            right:115px;
+        } 
+        55% { 
+            bottom:120px;
+            right:155px;
+        } 
+        66% { 
+            bottom:130px;
+            right:195px;
+        } 
+        77% { 
+            bottom:150px;
+            right:225px;
+        } 
+        88% { 
+            bottom:180px;
+            right:245px;
+        } 
+        100% { 
+            bottom:210px;
+            right:275px;
+        } 
+    }
+    @keyframes pushing_rock_80 { 
+        12% { 
+            bottom:40px;
+            right:10px;
+        } 
+        24% { 
+            bottom:60px;
+            right:45px;
+        } 
+        36% { 
+            bottom:80px;
+            right:75px;
+        } 
+        48% { 
+            bottom:100px;
+            right:115px;
+        } 
+        60% { 
+            bottom:120px;
+            right:155px;
+        } 
+        72% { 
+            bottom:130px;
+            right:195px;
+        } 
+        84% { 
+            bottom:150px;
+            right:225px;
+        } 
+        100% { 
+            bottom:180px;
+            right:245px;
+        } 
+    }
+    @keyframes pushing_rock_70 { 
+        15% { 
+            bottom:40px;
+            right:10px;
+        } 
+        30% { 
+            bottom:60px;
+            right:45px;
+        } 
+        45% { 
+            bottom:80px;
+            right:75px;
+        } 
+        60% { 
+            bottom:100px;
+            right:115px;
+        } 
+        75% { 
+            bottom:120px;
+            right:155px;
+        } 
+        90% { 
+            bottom:130px;
+            right:195px;
+        } 
+        100% { 
+            bottom:150px;
+            right:225px;
+        } 
+    }
+    @keyframes pushing_rock_60 { 
+        17% { 
+            bottom:40px;
+            right:10px;
+        } 
+        34% { 
+            bottom:60px;
+            right:45px;
+        } 
+        51% { 
+            bottom:80px;
+            right:75px;
+        } 
+        68% { 
+            bottom:100px;
+            right:115px;
+        } 
+        85% { 
+            bottom:120px;
+            right:155px;
+        } 
+        100% { 
+            bottom:130px;
+            right:195px;
+        }  
+    }
+    @keyframes pushing_rock_50 { 
+        20% { 
+            bottom:40px;
+            right:10px;
+        } 
+        40% { 
+            bottom:60px;
+            right:45px;
+        } 
+        60% { 
+            bottom:80px;
+            right:75px;
+        } 
+        80% { 
+            bottom:100px;
+            right:115px;
+        } 
+        100% { 
+            bottom:120px;
+            right:155px;
+        } 
+    }
+    @keyframes pushing_rock_40 { 
+        25% { 
+            bottom:40px;
+            right:10px;
+        } 
+        50% { 
+            bottom:60px;
+            right:45px;
+        } 
+        75% { 
+            bottom:80px;
+            right:75px;
+        } 
+        100% { 
+            bottom:100px;
+            right:115px;
+        } 
+    }
+    @keyframes pushing_rock_30 { 
+        33% { 
+            bottom:40px;
+            right:10px;
+        } 
+        66% { 
+            bottom:60px;
+            right:45px;
+        } 
+        100% { 
+            bottom:80px;
+            right:75px;
+        } 
+    }
+    @keyframes pushing_rock_20 { 
+        50% { 
+            bottom:40px;
+            right:10px;
+        } 
+        100% { 
+            bottom:60px;
+            right:45px;
+        } 
+    }
+    @keyframes pushing_rock_10 { 
+        100% { 
+            bottom:40px;
+            right:10px;
+        } 
+    }  
 }
 
 /*Landscape width exact width height*/
