--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -124,7 +124,7 @@ a:hover { text-decoration:underline; }
 
 
 /*REGISTER PAGE*/
-.register .eli_two { display:block; }
+.register .eli_two { display:none; }
 .register fieldset { margin:0; padding:0; border:0; }
 
 .eligibility {
