--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -411,7 +411,7 @@ h2.weather,
 /*    min-height: 100%;
     height: 70vh;*/
     margin: 0 0 0 0;
-    padding: 30px 0 0;
+    padding: 15px 0 0;
     text-align: left;
     color: #222;
     transition: .2s height ease-in-out;
@@ -625,6 +625,41 @@ h2.weather,
 
 input[readonly] {
     background-color: #ccc;
+}
+
+/*My Studies PAge*/
+.invite_code {
+    font-size: 100%;
+    width: 420px;
+    margin:0 auto;
+    padding: 30px 20px 10px;
+    border-radius: 8px;
+    background: #fff;
+}
+.invite_code label {
+    position:relative;
+}
+.invite_code label input {
+    width:100%;
+    padding-left:90px;
+}
+.invite_code label span {
+    position:absolute;
+    top:0; left:50%; bottom:0;
+    width:74px;
+    margin-left:-37px;
+    text-align:center; 
+    cursor:pointer;
+    line-height:250%;
+    color:#AAA;
+    transition:left .5s ease-in-out;
+}
+.invite_code label.focus span {
+    left:47px; 
+    right:auto;
+}
+.invite_code label.focus span:after{
+    content:":";
 }
 
 
