--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -144,55 +144,26 @@ a:hover { text-decoration:underline; }
 
 
 /*CONSENT FORM*/
-/*.WordSection1 { margin:20px;     
-  overflow-y: scroll;
-  height:50vh;
-  border:1px solid #ddd; 
-  border-radius:5px; 
-  color:#000 !important;
-  padding: 30px;
-}
-.WordSection1 span { color:#000 !important;}
-.WordSection1 h1 { text-align:center; }
-.consent .submits { 
-
-
-.consent_disclaim { 
-	font-size:12pt;
-	background:#F0F8FF;
-	margin:20px; 
-	padding:10px 20px;
-	border-radius:8px; 
-	
-} 
-#main-content .consent_disclaim ul{
-	display:inline-block; 
-	margin:0; padding:0 30px; 
-	
-}
-#main-content .consent_disclaim ul li{
-	color:#31708f; font-weight:bold;
-}*/
 .consent_slides { 
 	position : relative;
     overflow : hidden;
     text-align : left;
- 	height:500px;   
+ 	/*height:500px;   */
 
  	font-size:16px;  
 }
 .consent_slides section { 
-	position : absolute;
+	/*position : absolute;*/
     z-index : -1;
     top : 0;
     left : 10px;
     display : block;
     width : 100%;
-    height:500px;  
+    /*height:500px;  */
     margin : 0;
     padding : 0 30px;
     vertical-align : top;
-    opacity : 0;
+    /*opacity : 0;*/
     overflow-y : auto;
 
     transition : .8s opacity , .2s left ease-in-out;
