--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -2042,6 +2042,66 @@ a.closeparent {
     background:#E2F0DA;
 }
 
+#psqi_slider{
+    width: 100% !important;
+    min-height: 150px !important;
+}
+
+/*For handle customization*/
+.rs-container{
+    margin: 30px auto;
+}
+.rs-container span.rs-bar:nth-child(5) .rs-number{
+    margin-left: -25px !important;
+}
+.rs-container span.rs-bar:nth-child(16) .rs-number{
+    left: -36px !important;
+    top:-3px !important;
+}
+.rs-container span.rs-bar:nth-child(26) .rs-number{
+    margin-left: -38px !important;
+}
+.rs-handle  {
+  background-color: transparent;
+  border: 8px solid transparent;
+  border-right-color: black;
+  margin: -6px 0px 0px 14px !important;
+  border-width: 6px 120px 6px 4px;
+}
+.rs-handle:before  {
+  display: block;
+  content: " ";
+  position: absolute;
+  height: 22px;
+  width: 22px;
+  background: black;
+  right: -11px;
+  bottom: -11px;
+  border-radius: 100px;
+}
+
+/* color */
+.rs-path-color {
+  background: silver;
+}
+.rs-bar .rs-seperator {
+  border-color: #424242;
+}
+.rs-bg-color {
+    background-color: #f8f8f8 !important;
+}
+span.rs-number {
+  position: absolute;
+  top: -10px;
+  left: -26px;
+}
+
+
+
+
+
+
+
 
 .labellink:active,
 .labellink:visited,
