--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -773,6 +773,7 @@ input[readonly] {
     display: block;
     font-size: 200%;
     color: #333;
+    text-transform: capitalize;
 }
 
 .profile_card figcaption i {
