--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -474,3 +474,10 @@ a:hover { text-decoration:underline; }
 }
 
 .alink { color:#369; }
+
+.well h3.or {
+	display:block;
+	font-size:140%;
+	text-align:center;
+	margin:0px auto 20px;
+}
