--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -468,7 +468,7 @@ h2.weather,
     position: relative;
     overflow: hidden;
     overflow-y: auto;
-    width: calc(100% + 10px);
+    width: calc(100% + 0);
 /*    min-height: 100%;
     height: 70vh;*/
     margin: 0 0 0 0;
