--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -469,8 +469,8 @@ h2.weather,
     overflow: hidden;
     overflow-y: auto;
     width: calc(100% + 0);
-/*    min-height: 100%;
-    height: 70vh;*/
+    min-height: 100%;
+    /*height: 70vh;*/
     margin: 0 0 0 0;
     padding: 15px 0 0;
     text-align: left;
