--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -469,8 +469,7 @@ h2.weather,
     overflow: hidden;
     overflow-y: auto;
     width: calc(100% + 0);
-    min-height: 100%;
-    border:1px solid red;
+    min-height: 70vh;
     /*height: 70vh;*/
     margin: 0 0 0 0;
     padding: 15px 0 0;
