--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -205,9 +205,11 @@ a:hover { text-decoration:underline; }
 	position : relative;
     overflow : hidden;
     text-align : left;
- 	/*height:500px;   */
-
- 	font-size:16px;  
+	height: 500px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius:5px;
+	margin: 30px 10px;
 }
 .consent_slides section { 
 	/*position : absolute;*/
