--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -280,6 +280,7 @@ a:hover { text-decoration:underline; }
 }
 
 .consent .submits button[role='consent'],
+.consent .submits button[role='print'],
 .consent .submits button[role='next'] {
 	float:right; margin-right:30px;
 }
@@ -499,4 +500,34 @@ a:hover { text-decoration:underline; }
 .lang.tw {
     font-size:140%;
     line-height:140%;
+}
+
+
+img.print{
+	display:none;
+}
+
+@media print {
+	.consent #testserver{display:none;}
+	.consent .consent_slides{
+		height:auto;
+		border:none;
+		border-radius:0;
+		margin:0;
+	}
+	.consent #register_steps{
+		display:none;
+	}
+	.consent #main-content .well{
+		padding-top:140px;
+	}
+
+	img.print{
+		display:block;
+		width: 10%;
+	    position: absolute;
+	    top: 10px;
+	    left: 50%;
+	    margin-left: -40px;
+	}
 }
