--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -285,6 +285,14 @@ a:hover { text-decoration:underline; }
 	float:right; margin-right:30px;
 }
 
+#irbexp {
+	position: absolute;
+    top: 10px;
+    right: 10px;
+}
+#irbexp b{ display:block; }
+#irbexp i { font-style:normal; }
+
 /*ACCOUNT SETUP*/
 .accountSetup select { margin-bottom:8px; }
 
@@ -483,6 +491,8 @@ a:hover { text-decoration:underline; }
 	text-align:center;
 	margin:0px auto 20px;
 }
+
+
 
 
 /*LANGUAGE*/
